site/styles/_footer.scss
footer {
  display: flex;
  flex-direction: column;
  padding-top: 60px;
}

.footer-brand-link {
  align-self: center;
  display: flex;
  margin-bottom: 30px;

  @include media-breakpoint-up(xl) {
    align-self: flex-start;
    margin: 0 50px 20px;
  }
}

.footer-brand-image {
  height: var(--footer-brand-height);
}

.footer-nav {
  margin-bottom: 30px;

  @include media-breakpoint-up(xl) {
    margin: 0 50px 20px;
  }

  .nav {
    flex-direction: column;
    justify-content: center;

    @include media-breakpoint-up(xl) {
      flex-direction: row;
      justify-content: flex-start;
    }
  }

  .nav-link {
    text-align: center;

    @include media-breakpoint-up(xl) {
      margin-right: 20px;
      padding: 0;
    }

    &:hover {
      color: var(--body-color-hover);
    }
  }
}

.footer-social-media-icons {
  display: grid;
  gap: 16px;
  grid-auto-columns: 32px;
  grid-auto-flow: column;
  grid-template-rows: 1fr;
  justify-content: center;
  margin-bottom: 30px;

  @include media-breakpoint-up(xl) {
    justify-content: start;
    margin: 0 50px 20px;
    .s72-btn {
      text-align: left;
    }
  }

  .s72-btn {
    border: initial;
    grid-row: 1;
    padding: 0;

    i {
      color: var(--body-color);
      font-size: 25px;

      &:hover {
        color: var(--body-color-hover);
      }
    }
  }
}

.footer-info {
  background-color: $footer-bar-background-color;
  margin-top: 30px;
  padding: 20px 42px;

  @include media-breakpoint-up(xl) {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 20px;
    padding: 20px 50px;
  }
}

.copyright-statement {
  @include body-2-style;
  margin: 0 0 7px;
  text-align: center;

  @include media-breakpoint-up(xl) {
    margin: 0;
  }
}

.powered-by {
  @include body-2-style;
  margin: 0;
  text-align: center;

  a {
    @include caption-1-style;

    &:hover {
      text-decoration: none;
    }
  }
}

.app-banner,
.tv-app-banner {
  align-items: center;
  display: flex;
  flex-direction: column;
  margin: 0 20px;
  padding: 50px 0;

  @include media-breakpoint-up(lg) {
    margin: 0 50px;
  }

  .app-badge-container {
    display: flex;
  }

  .tv-app-badge-container {
    display: grid;
    gap: 22px;
    grid-auto-flow: column;
    grid-template-rows: 1fr;
    justify-content: center;

    .app-badge-link {
      align-items: center;
      display: flex;
      height: 45px;
    }
  }

  .app-badge-title,
  .tv-app-badge-title {
    @include body-1-style;
    margin-bottom: 20px;
    text-align: center;
  }

  .app-badge-link {
    margin: 0 5px;
  }

  .app-badge-image {
    height: 40px;
  }
}

.sponsor-banner {
  display: flex;
  justify-content: center;
  padding: 60px 20px 0;

  @include media-breakpoint-up(lg) {
    padding: 60px 50px 0;
  }

  .sponsor-picture {
    width: 100%;

    .sponsor-image {
      width: 100%;
    }
  }
}

